# 3b_solution

./: .gitignore  README.md  pyproject.toml
docs/: METHODOLOGY.md  arxiv_note.md
examples/: figure8_demo.py  general_3body_demo.py  run_pythagorean_demo.py
src/threebody/: __init__.py  core.py  visualize.py
