[build-system]
requires = ["setuptools>=61", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "threebody"
version = "1.0.0"
description = "Tension-adaptive leapfrog 3-body integrator (GOAT-TS native TS logic)"
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.10"
authors = [{ name = "BoggersTheFish" }]
keywords = ["n-body", "three-body", "leapfrog", "symplectic", "adaptive"]
classifiers = [
  "Development Status :: 5 - Production/Stable",
  "Intended Audience :: Science/Research",
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Topic :: Scientific/Engineering :: Physics",
]
dependencies = [
  "numpy>=1.24,<3",
  "matplotlib>=3.7,<4",
]

[project.optional-dependencies]
dev = ["pytest>=7", "ruff>=0.4"]

[project.urls]
Homepage = "https://github.com/BoggersTheFish/3b_solution"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-dir]
"" = "src"

[tool.setuptools.package-data]
threebody = ["py.typed"]

[tool.ruff]
line-length = 100
target-version = "py310"
